--- a/lab1/TF_Part1_Intro.ipynb
+++ b/lab1/TF_Part1_Intro.ipynb
@@ -61,10 +61,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "LkaimNJfYZ2w",
-        "outputId": "172f4a57-0b5b-4ed2-f344-cb4341806616",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "172f4a57-0b5b-4ed2-f344-cb4341806616"
       },
       "outputs": [
         {
@@ -108,10 +108,10 @@
       "execution_count": 5,
       "metadata": {
         "id": "tFxztZQInlAB",
-        "outputId": "8032004f-da41-45dc-b515-ad7aaedba852",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8032004f-da41-45dc-b515-ad7aaedba852"
       },
       "outputs": [
         {
@@ -145,10 +145,10 @@
       "execution_count": 7,
       "metadata": {
         "id": "oaHXABe8oPcO",
-        "outputId": "2adb3cb8-ae98-41b5-f97c-6db10f34caa5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2adb3cb8-ae98-41b5-f97c-6db10f34caa5"
       },
       "outputs": [
         {
@@ -192,10 +192,10 @@
       "execution_count": 19,
       "metadata": {
         "id": "tFeBBe1IouS3",
-        "outputId": "435c93ae-130a-4dae-8a3b-51d2f467b069",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "435c93ae-130a-4dae-8a3b-51d2f467b069"
       },
       "outputs": [
         {
@@ -220,11 +220,338 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "metadata": {
-        "id": "Zv1fTn_Ya_cz"
+        "id": "Zv1fTn_Ya_cz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18c5fef1-7061-4b5c-d6e6-7293d9033dc6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[[[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  ...\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]]\n",
+            "\n",
+            "\n",
+            " [[[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  ...\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]]\n",
+            "\n",
+            "\n",
+            " [[[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  ...\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]]\n",
+            "\n",
+            "\n",
+            " ...\n",
+            "\n",
+            "\n",
+            " [[[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  ...\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]]\n",
+            "\n",
+            "\n",
+            " [[[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  ...\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]]\n",
+            "\n",
+            "\n",
+            " [[[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  ...\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]\n",
+            "\n",
+            "  [[0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   ...\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]\n",
+            "   [0 0 0]]]], shape=(10, 256, 256, 3), dtype=int32)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ],
       "source": [
         "'''TODO: Define a 4-d Tensor.'''\n",
         "# Use tf.zeros to initialize a 4-d Tensor of zeros with size 10 x 256 x 256 x 3.\n",
@@ -233,7 +560,8 @@
         "\n",
         "assert isinstance(images, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(images).numpy() == 4, \"matrix must be of rank 4\"\n",
-        "assert tf.shape(images).numpy().tolist() == [10, 256, 256, 3], \"matrix is incorrect shape\""
+        "assert tf.shape(images).numpy().tolist() == [10, 256, 256, 3], \"matrix is incorrect shape\"\n",
+        "print(images)"
       ]
     },
     {
@@ -250,10 +578,10 @@
       "execution_count": 20,
       "metadata": {
         "id": "FhaufyObuLEG",
-        "outputId": "82266bf4-8bf2-4059-f831-6f624c9e4ab7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "82266bf4-8bf2-4059-f831-6f624c9e4ab7"
       },
       "outputs": [
         {
@@ -291,11 +619,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "X_YJrZsxYZ2z"
+        "id": "X_YJrZsxYZ2z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e4e5a5f-f6a8-4c0a-bc7c-a7c073fd590c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(76, shape=(), dtype=int32)\n",
+            "tf.Tensor(76, shape=(), dtype=int32)\n"
+          ]
+        }
+      ],
       "source": [
         "# Create the nodes in the graph, and initialize values\n",
         "a = tf.constant(15)\n",
@@ -327,21 +668,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "PJnfzpWyYZ23",
-        "scrolled": true
+        "scrolled": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a877353-2387-4cae-f808-1e588ef65c8c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(4560, shape=(), dtype=int32)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ],
       "source": [
         "### Defining Tensor computations ###\n",
         "\n",
         "# Construct a simple computation function\n",
         "def func(a,b):\n",
         "  '''TODO: Define the operation for c, d, e (use tf.add, tf.subtract, tf.multiply).'''\n",
-        "  c = # TODO\n",
-        "  d = # TODO\n",
-        "  e = # TODO\n",
+        "  c = tf.add(a,b)\n",
+        "  d = tf.subtract(b, 1)\n",
+        "  e = tf.multiply(c, d)\n",
         "  return e"
       ]
     },
@@ -356,11 +717,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
-        "id": "pnwsf8w2uF7p"
+        "id": "pnwsf8w2uF7p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "264875fa-16bc-4659-d6b3-d8e888cb671a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(6.0, shape=(), dtype=float32)\n"
+          ]
+        }
+      ],
       "source": [
         "# Consider example values for a,b\n",
         "a, b = 1.5, 2.5\n",
